kube/plex/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plex-deployment
  labels:
    app: plex
spec:
  replicas: 1
  selector:
    matchLabels:
      app: plex
  template:
    metadata:
      labels:
        app: plex
    spec:
      volumes:
      - name: appdata
        persistentVolumeClaim:
          claimName: appdata-pvc
      - name: media
        persistentVolumeClaim:
          claimName: media-pvc
      containers:
      - name: plex
        image: lscr.io/linuxserver/plex
        resources:
          requests:
            memory: "8Gi"
        ports:
        - containerPort: 32400
          name: pms-web
          protocol: TCP
        - containerPort: 32469
          name: dlna-tcp
          protocol: TCP
        - containerPort: 1900
          name: dlna-udp
          protocol: UDP
        - containerPort: 3005
          name: plex-companion
          protocol: TCP  
        - containerPort: 5353
          name: discovery-udp
          protocol: UDP  
        - containerPort: 8324
          name: plex-roku
          protocol: TCP  
        - containerPort: 32410
          name: gdm-32410
          protocol: UDP
        - containerPort: 32412
          name: gdm-32412
          protocol: UDP
        - containerPort: 32413
          name: gdm-32413
          protocol: UDP
        - containerPort: 32414
          name: gdm-32414
          protocol: UDP
        volumeMounts:
        - mountPath: "/config"
          subPath: "plex/"
          name: appdata
        - mountPath: "/tv"
          subPath: "TV/"
          name: media
        - mountPath: "/movies"
          subPath: "Movies/"
          name: media
        - mountPath: "/music"
          subPath: "Music/"
          name: media

---
apiVersion: v1
kind: Service
metadata:
  name: plex-service
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.2.10
  selector:
    app: plex
  ports:
    - port: 32400
      targetPort: 32400
      name: pms-web
      protocol: TCP
    - port: 3005
      targetPort: 3005
      name: plex-companion
    - port: 8324
      name: plex-roku
      targetPort: 8324  
      protocol: TCP  
    - port: 32469
      targetPort: 32469
      name: dlna-tcp
      protocol: TCP
    - port: 1900
      targetPort: 1900
      name: dlna-udp
      protocol: UDP
    - port: 5353
      targetPort: 5353
      name: discovery-udp
      protocol: UDP
    - port: 32410
      targetPort: 32410
      name: gdm-32410
      protocol: UDP
    - port: 32412
      targetPort: 32412
      name: gdm-32412
      protocol: UDP
    - port: 32413
      targetPort: 32413
      name: gdm-32413
      protocol: UDP
    - port: 32414
      targetPort: 32414
      name: gdm-32414
      protocol: UDP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plex-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: plex.ryougi.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: plex-tcp
            port:
              number: 32400
